--- a/styles/base.css
+++ b/styles/base.css
@@ -67,6 +67,10 @@ a{
     text-decoration: none;
     color: var(--just-white);
 }
+/* a:visited, */
+a:focus,
+a:hover,
+a:active {color: var(--action);}  /* selected link */
 
 ul{
     list-style:none;
