--- a/styles/work.css
+++ b/styles/work.css
@@ -14,11 +14,11 @@
 }
 
 
-.work__content.animation{
+/* .work__content.animation{
     -webkit-animation: scroll 28s linear infinite  forwards;
     animation: scroll 28s linear infinite  forwards;
 }
-
+ */
 
 .work .work__item{
     width: 100%;
@@ -69,18 +69,18 @@
     padding-bottom: 1.6rem;
 }
 
-
+/* 
 @keyframes scroll {
     0% {
       -webkit-transform: translateX(0);
               transform: translateX(0);
     }
     100% {
-      /* -webkit-transform: translateX(calc(-260px * 4 + 40px)); */
+
               transform: translateX(calc((-260px)* var(--numero-de-proyectos-presentados)*0.5)); 
     }
 }
-
+ */
 .swiper-button-next, 
 .swiper-button-prev{
     outline: none;
