arranging some details

--- a/styles/base.css
+++ b/styles/base.css
@@ -47,6 +47,8 @@ Agregando estilos:
     --color42: #FDDB26;
     --color5: #D2FAFA;
     --color6: #FF5D68;
+    --color7: #FF5D68;
+    --color8: #FF5D68;
     --numero-de-proyectos-presentados: 10
 
 }
